Uploader for image gallery and defined some sizes

--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
 				<li><%= link_to 'About',href='/pages/about'%></li> 
 				<li><%= link_to 'Events', events_path %></li> 
 				<li><%= link_to 'Artists', users_path %></li> 
-				<li><%= link_to 'Posts', hred='/posts' %></li> 
-				<li><%= link_to 'Gallery', events_path %></li>
+				<li><%= link_to 'Posts', href='/posts' %></li> 
+				<li><%= link_to 'Gallery', href='/pages/gallery' %></li>
 			</ul>
 		</nav>
 	</div>
