--- a/final_project/art_project/app/views/events/_form.html.erb
+++ b/final_project/art_project/app/views/events/_form.html.erb
@@ -29,7 +29,7 @@
   </div>
   <div class="field">
     <%= f.label :image %><br>
-    <%= f.image_field :image %>
+    <%= f.file_field :image %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
