Destroy link added to remove posts by admin

--- a/final_project/art_project/app/views/posts/index_all.html.erb
+++ b/final_project/art_project/app/views/posts/index_all.html.erb
@@ -7,17 +7,20 @@
     <button class="btn" type="submit"><i class="icon-search">Search</i></button>
   </div>
 <% end %>
-
+<p>Events:</p>
 <%counter=1%>
 <%if @posts_title.present?%>
 	<% @posts_title.each do |post| %>
 	  <div class="post">
 	    <h4 class="post-title"><%=counter%>.<%= link_to post.title, post %></h4>
-		<%if post.user%>
+		<%if post.user%> 
 	    <h6 class="post-author">Author:<%=  post.user.first_name%></h6>
 	  <% else %>
 	  	<h6>Guest</h6>
 	  <% end %>
+	  <%if current_user.present? && current_user.admin?%>
+		<%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure you want to remove post?' } %>
+		<% end%>
 	    <%counter+=1%>
 	  </div>
 	<% end %>
