--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -3,6 +3,10 @@
 <head>
   <title>Artproject</title>
   <!-- <title>ArtProject</title> -->
+  <!-- Include Version of JQuery -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+  <!-- Galleria was placed on app/assets/javascripts/galleria.js-->
+  <!--<script src="galleria/galleria-1.4.min.js"></script>  -->
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
