--- a/final_project/art_project/app/views/pages/gallery.html.erb
+++ b/final_project/art_project/app/views/pages/gallery.html.erb
@@ -1,1 +1,8 @@
-<h3>gallery images</h3>
+<!-- <div class="galleria">
+    <!-Images are loaded from app/assets/images -->
+   <%#=image_tag("home_image.jpg", alt: "Home page logo") %>
+   <%#=image_tag("image_3.jpg", alt: "Home page logo") %>
+    <%#=image_tag("258d80b.jpg", alt: "Home page logo") %>
+<!-- </div> -->
+
+
