--- a/final_project/art_project/app/assets/stylesheets/pages.scss
+++ b/final_project/art_project/app/assets/stylesheets/pages.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+ .galleria{ 
+ 	width: 100%;
+ 	height: 600px;
+ 	// default black background:
+ 	background: #000 
+ }
