Added search user case insensitive

--- a/final_project/art_project/app/views/events/_form.html.erb
+++ b/final_project/art_project/app/views/events/_form.html.erb
@@ -1,3 +1,5 @@
+
+<div id="event">
 <%= form_for(@event) do |f| %>
   <% if @event.errors.any? %>
     <div id="error_explanation">
@@ -47,3 +49,6 @@
     <%= f.submit %>
   </div>
 <% end %>
+</div>
+
+
