--- a/final_project/art_project/app/views/image_galleries/index.html.erb
+++ b/final_project/art_project/app/views/image_galleries/index.html.erb
@@ -1,12 +1,16 @@
 <p id="notice"><%= notice %></p>
 
+<%if current_user.present? && current_user.admin?%>
+  <%= link_to 'Add new Image gallery', new_image_gallery_path %>
+ <% end %>
+
 <h1>Listing Image Galleries</h1>
 
 
     <% @image_galleries.each do |image_gallery| %>
         
-        <p><%=image_gallery.title%> :<%=image_gallery.date%></p>
-        <a href="/image_galleries/<%=image_gallery.id%>"><img src="<%= image_gallery.picture[0]%>"></a>
+        <a href="/image_galleries/<%=image_gallery.id%>"><p><%=image_gallery.title%> :<%=image_gallery.date%></p>
+        <img src="<%= image_gallery.picture[0]%>"></a>
      
       <%if current_user.present? && current_user.admin?%>
        <%= link_to 'Edit', edit_image_gallery_path(image_gallery) %>
@@ -16,6 +20,4 @@
 
     <br>
  
- <%if current_user.present? && current_user.admin?%>
-  <%= link_to 'New Image gallery', new_image_gallery_path %>
- <% end %>
+ 
