--- a/final_project/art_project/app/views/users/index.html.erb
+++ b/final_project/art_project/app/views/users/index.html.erb
@@ -1,3 +1,11 @@
+<p id="notice"><%= notice %></p>
+
+<%= form_tag '/users', :method => 'get',class: "navbar-form" do %>
+  <div class="input-append">
+    <%= text_field_tag :search_user, params[:search_user], class: "span2", placeholder: "Search User by name" %>
+    <button class="btn" type="submit"><i class="icon-search">Search</i></button>
+  </div>
+ <% end %>
 
 <h1>List of artists:</h1>
 <%if @users.count>0%>
@@ -5,6 +13,7 @@
     <thead>
       <tr>
         <th>Name</th>
+         <th>Image</th>
         <th colspan="3"></th>
       </tr>
     </thead>
@@ -14,6 +23,7 @@
         <tr>
           
           <td><a href=' /users/<%=user.id %>'><%= user.first_name+' '+user.last_name%></a></td>
+          <td><img src='<%=user.image_url(:user_image)%>'></td>
           <!-- <td><%= user.email%></td> -->
           <!-- Only for user authorization -->
           <% if current_user.present? and current_user.admin? %>
