fixing on bootstrap main page header

--- a/final_project/art_project/app/assets/stylesheets/custom.css.scss
+++ b/final_project/art_project/app/assets/stylesheets/custom.css.scss
@@ -1,87 +1,71 @@
-@import "bootstrap-sprockets";
-@import "bootstrap";
+// @import "bootstrap-sprockets";
+// @import "bootstrap";
 
 /* universal */
 
-body {
-  padding-top: 60px;
-}
-#container{
-  height:100%;
-}
+
+// #container{
+//   height:100%;
+// }
 
 /* typography */
 
-h1, h2, h3, h4, h5, h6 {
-  line-height: 1;
-}
-h1 {
-  font-size: 4em;
-  letter-spacing: -2px;
-  margin-bottom: 30px;
-  text-align: center;
-}
+// h1, h2, h3, h4, h5, h6 {
+//   line-height: 1;
+// }
+// h1 {
+//   font-size: 4em;
+//   letter-spacing: -2px;
+//   margin-bottom: 30px;
+//   text-align: center;
+// }
 
-h2 {
-  font-size: 1.7em;
-  letter-spacing: -1px;
-  margin-bottom: 30px;
-  text-align: center;
-  font-weight: normal;
-  color: #777;
-}
+// h2 {
+//   font-size: 1.7em;
+//   letter-spacing: -1px;
+//   margin-bottom: 30px;
+//   text-align: center;
+//   font-weight: normal;
+//   color: #777;
+// }
 
-p {
-  font-size: 1.1em;
-  line-height: 1.7em;
-}
+// p {
+//   font-size: 1.1em;
+//   line-height: 1.7em;
+// }
 
 /* header */
 // When the logo is included on page
-#logo {
-  float: left;
-  margin-right: 10px;
-  font-size: 1.7em;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: -1px;
-  padding-top: 9px;
-  font-weight: bold;
-}
-
-#logo:hover {
-  color: #fff;
-  text-decoration: none;
-}
 
 
-.center {
-  text-align: center;
-}
 
-.center h1 {
-  margin-bottom: 10px;
-}
-
-.home_image{
-	text-align: center;
-}
-
-#content {
-	padding-bottom:70px; /* Height of the footer element */
-}
-
-/* footer */
-// footer {
-// 	background: #72CEC7;
-// 	width:100%;
-// 	height:70px;
-// 	// position:absolute;
-// 	bottom:0;
-// 	text-align: center;
-
+// .center {
+//   text-align: center;
 // }
-.vertical-center{
-	padding-top:30px;
-}
+
+// .center h1 {
+//   margin-bottom: 10px;
+// }
+
+// .home_image{
+// 	text-align: center;
+// }
+
+// #content {
+// 	padding-bottom:70px; /* Height of the footer element */
+// }
+
+// /* footer */
+// // footer {
+// // 	background: #72CEC7;
+// // 	width:100%;
+// // 	height:70px;
+// // 	// position:absolute;
+// // 	bottom:0;
+// // 	text-align: center;
+
+// // }
+// .vertical-center{
+// 	padding-top:30px;
+// }
 
