--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -13,29 +13,49 @@
 </head>
 <div id='container'>
 <body>
-<header class="navbar navbar-fixed-top navbar-inverse">
- <div class="container">
- 		<nav>
-      <ul class="nav navbar-nav navbar-right">
-				<li><%= link_to 'Home',href='/'%></li>
-				<li><%= link_to 'About',href='/pages/about'%></li> 
-				<li><%= link_to 'Events', events_path %></li> 
-				<li><%= link_to 'Artists', users_path %></li> 
-				<li><%= link_to 'Posts', href='/posts' %></li> 
-				<li><%= link_to 'Gallery', href='/pages/gallery' %></li>
+	<div class="container-fluid">
+  	<!-- First row for the nav links -->
+  	<div class="row header-row">
+  	<!-- Column on first row to insert logo -->
+  		<div class="col-md-2">
+ 		  	<ul class="nav navbar-nav navbar-center">
+ 				 	<li><%= link_to 'LOGO',href='/'%></li> 
+ 				</ul>
+ 			</div>
+ 			<!-- Column that holds the main nav -->
+ 			<div class="col-md-8">
+			<!-- Row for dividing the nav buttons inside the  -->
+ 			 <div class="row center-buttons">
+ 			 	<div class=class="col-md-2">
+ 			 		<ul class="nav navbar-nav navbar-center">
+						<% if user_signed_in? && !current_user.admin?%>
+	  				<li>Welcome <%#= current_user.first_name+ ' ' +current_user.last_name%></li>
+	  				<li><%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %></li>
+		 			<%elsif current_user.present? && current_user.admin?%>
+						<!-- <li>Welcome Administrator!</li> -->
+	  		   	<li><%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %></li> 
+					<% else %>
+	  				<!-- <li>Welcome!</li> -->
+	  				<li><%= link_to 'Log in',  user_session_path %></li>
+					<% end %>
+				 </ul>
+ 			 	</div>
+ 			 	</div>
+ 				<ul class="nav navbar-nav">
+				<!-- <li><%#= link_to 'Home',href='/'%></li> -->
+				
+					<li><%= link_to 'About',href='/pages/about'%></li> 
+					<li><%= link_to 'Events', events_path %></li> 
+					<li><%= link_to 'Artists', users_path %></li> 
+					<li><%= link_to 'Posts', href='/posts' %></li> 
+					<li><%= link_to 'Gallery', href='/pages/gallery' %></li>
 			</ul>
-		</nav>
+ 			</div>
+
+      
+		<!-- </nav> -->
 	</div>
-	<% if user_signed_in? && !current_user.admin?%>
-  		<strong> Welcome <%= current_user.first_name+ ' ' +current_user.last_name%></strong>
-  		<%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %> 
-	 <%elsif current_user.present? && current_user.admin?%>
-		<strong> Welcome Administrator!</strong>
-  		<%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %> 
-	<% else %>
-  		<strong>Welcome!</strong> 
-  		<%= link_to 'Log in',  user_session_path %>
-	<% end %>
+	
 </header>
 <!-- <a href='/'>Home</a> | -->
 <!-- To send alerts when log in or log out sucessful -->
