--- a/final_project/art_project/app/assets/stylesheets/project.css.scss
+++ b/final_project/art_project/app/assets/stylesheets/project.css.scss
@@ -36,7 +36,24 @@
   text-decoration: none;
 }
 */
+.border-logo{
+	  border: 2px solid red;
+	  height: 40px; /*border-top:-50px;*/
+}
 
+.homepage_image{
+    height: 100vh;
+	width: 100%;
+	background-image: asset-url("homepage1.jpg");
+}
+
+.some_other {
+	height: 100vh;
+
+}
+/*.sep-elements{
+	border-right: 10px;
+}*/
 /*To show images using javascript plugin*/
 .galleria{ 
  	width: 100%;
