--- a/final_project/art_project/app/views/pages/home.html.erb
+++ b/final_project/art_project/app/views/pages/home.html.erb
@@ -1,11 +1,15 @@
-<p id="notice"><%= notice %></p>
-<div class="center jumbotron">
+<!-- <p id="notice"><%= notice %></p> -->
+<!-- <div class="center jumbotron">
 	<h2>Home page</h2>
+</div> -->
+
+<div class='homepage_image row'>
+	
+
 </div>
 
-<div class='home_image'>
-	<%= link_to image_tag("home_image.jpg", alt: "Home page logo"),
-            'http://google.com/' %>
+<div class="some_other row">
+	HAYYY
 </div>
 
 
