--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link href='https://fonts.googleapis.com/css?family=BenchNine:400,300' rel='stylesheet' type='text/css'>
 </head>
 <div id='container'>
 <body>
@@ -31,13 +32,13 @@
  			 		<ul class="nav navbar-nav navbar-center">
 						<% if user_signed_in? && !current_user.admin?%>
 	  				<li>Welcome <%#= current_user.first_name+ ' ' +current_user.last_name%></li>
-	  				<li><%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %></li>
+	  				<li><%= link_to 'LOGOUT', destroy_user_session_path, method: 'DELETE' %></li>
 		 			<%elsif current_user.present? && current_user.admin?%>
 						<!-- <li>Welcome Administrator!</li> -->
-	  		   	<li><%= link_to 'Logout', destroy_user_session_path, method: 'DELETE' %></li> 
+	  		   	<li><%= link_to 'LOGOUT', destroy_user_session_path, method: 'DELETE' %></li> 
 					<% else %>
 	  				<!-- <li>Welcome!</li> -->
-	  				<li><%= link_to 'Log in',  user_session_path %></li>
+	  				<li><%= link_to 'LOG IN',  user_session_path %></li>
 					<% end %>
 				 </ul>
  			 	</div>
@@ -48,11 +49,11 @@
  			  <div class=class="col-md-5">
  			  	<ul class="nav navbar-nav navbar-right ">
 				<!-- <li><%#= link_to 'Home',href='/'%></li> -->
-					<li class="sep-elements"><%= link_to 'About',href='/pages/about'%></li> 
-					<li class="sep-elements"><%= link_to 'Events', events_path %></li> 
-					<li class="sep-elements"><%= link_to 'Artists', users_path %></li> 
-					<li class="sep-elements"><%= link_to 'Posts', href='/posts' %></li> 
-					<li class="sep-elements"><%= link_to 'Gallery', href='/pages/gallery' %></li>
+					<li class="sep-elements"><%= link_to 'ABOUT',href='/pages/about'%></li> 
+					<li class="sep-elements"><%= link_to 'EVENTS', events_path %></li> 
+					<li class="sep-elements"><%= link_to 'ARTISTS', users_path %></li> 
+					<li class="sep-elements"><%= link_to 'POSTS', href='/posts' %></li> 
+					<li class="sep-elements"><%= link_to 'GALLERY', href='/pages/gallery' %></li>
 			    </ul>
  			  </div>
  			</div>
