--- a/final_project/art_project/app/assets/stylesheets/project.css.scss
+++ b/final_project/art_project/app/assets/stylesheets/project.css.scss
@@ -4,13 +4,13 @@
 @import "bootstrap";
 /*General*/
 /*body {
-  padding-top: 60px;
+    min-width: 1140px; 
 }*/
 
 /*Typografy*/
- h1, h2, h3, h4, h5, h6 {
+ /*h1, h2, h3, h4, h5, h6 {
 	line-height: 1;
-}
+}*/
 /*h1 {
    font-size: 2em;
    letter-spacing: -2px;
@@ -37,24 +37,40 @@
 }
 */
 .border-logo{
-	  /*border: 5px solid white;*/
-	  border: 5px solid rgba(255, 255, 255, 0.6);
-	  height: 40px; /*border-top:-50px;*/
-	  font-family: 'BenchNine', sans-serif;
-	  font-size: 19px;
+
+	position: fixed;
+  	margin-left: 10em;
+ 	margin-top: 2em;
+	border: 3px solid rgba(255, 255, 255, 0.6);
+	height: 40px; 
+	font-family: 'BenchNine', sans-serif;
+	font-size: 19px;
+
 };
 
-
+/*Home page background image with gradient*/
 .homepage_image{
-    height: 100vh;
-	width: 100%;
- 
-
-  background: -webkit-linear-gradient(rgba(0,0,0,0.5) 10%, rgba(255,255,255,0.2) 50%),
-  url("homepage1.jpg") no-repeat;
-
+  
+  width: 100%;
+  height: 100vh;
+  background: -webkit-linear-gradient(rgba(0,22,45,0.5) 10%, rgba(255,255,255,0.2) 50%),
+  url("homepage1.jpg") center center no-repeat;
     
  };
+
+/*Navegation buttoms*/
+.navbar-nav li a {
+    color:white;
+    margin-top: -7px;
+}
+.navbar-nav li a:hover {
+   
+    /*To take the gray of the hover bootstrap*/
+     color: inherit;
+    
+    /*background: url('../YourColoredImage.png');*/
+};
+
 
 .some_other {
 	height: 100vh;
