--- a/final_project/art_project/app/views/pages/home.html.erb
+++ b/final_project/art_project/app/views/pages/home.html.erb
@@ -4,8 +4,8 @@
 </div> -->
 
 <div class='homepage_image'>
-	
-
+	<%= image_tag 'Logo1.png', alt: 'logo',:class => "logo_big"%>
+	<%#= image_tag 'Logo_menu.png', alt: 'logo', :class => "logo_small"%>
 </div>
 
 <div class="some_other row">
