--- a/final_project/art_project/app/assets/stylesheets/project.css.scss
+++ b/final_project/art_project/app/assets/stylesheets/project.css.scss
@@ -39,12 +39,18 @@
 .border-logo{
 
 	position: fixed;
-  	margin-left: 10em;
- 	margin-top: 2em;
+  	margin-left: 13em;
+ 	margin-top: 48px;
 	border: 3px solid rgba(255, 255, 255, 0.6);
 	height: 40px; 
 	font-family: 'BenchNine', sans-serif;
 	font-size: 19px;
+
+};
+.logo_small{
+	margin-top: 2em;
+	margin-left:4em;
+	/*padding-left: 20px;*/
 
 };
 
@@ -66,9 +72,9 @@
 .navbar-nav li a:hover {
    
     /*To take the gray of the hover bootstrap*/
-     color: inherit;
-    
-    /*background: url('../YourColoredImage.png');*/
+     color: rgba(0,22,60,0.5);
+     border-bottom:3px solid rgba(0,22,60,0.5);
+     background-color: transparent; ;
 };
 
 
