--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -71,6 +71,21 @@
 
 </div>
 
+<footer>
+    <div class="container">
+      <div class="asides clearfix">
+        <aside class="logo">
+        </aside> 
+      </div>
+      <div class="copyright">
+        <small>
+          2015, Cajon Project
+        </small>
+      </div>
+    </div>
+  </footer>
+
+
 <!-- <footer>
 	<div class='vertical-center'>
 		<spam>2015 ArtProject</spam>
