Added footer logos and css

--- a/final_project/art_project/app/views/layouts/application.html.erb
+++ b/final_project/art_project/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
   <%= csrf_meta_tags %>
   <!-- Font used on the nav buttons -->
   <link href='https://fonts.googleapis.com/css?family=BenchNine:400,300' rel='stylesheet' type='text/css'>
+  <!-- Font for the footer -->
+  <link href='https://fonts.googleapis.com/css?family=Enriqueta' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div class="container-fluid" id="home-section">
@@ -79,8 +81,13 @@
       </div>
       <div class="copyright">
         <small>
-          2015, Cajon Project
+          2015 Cajon Project
         </small>
+        <div class="footer-icons">
+        	<a href='http://www.facebook.com'><%= image_tag 'Icono_Face.png', alt: 'Facebook logo', :class => "logo_footer"%>
+        	<a href='http://www.instagram.com'><%= image_tag 'Icono_Insta.png', alt: 'Instagram logo', :class => "logo_footer"%>
+        	<a href='http://twitter.com'><%= image_tag 'Icono_Twit.png', alt: 'Twitter logo', :class => "logo_footer"%>
+        </div>
       </div>
     </div>
   </footer>
