--- a/final_project/art_project/app/assets/stylesheets/project.css.scss
+++ b/final_project/art_project/app/assets/stylesheets/project.css.scss
@@ -82,15 +82,27 @@
 .galleria{ 
  	width: 100%;
  	height: 500px;
- 	// default black background:
- 	background: #000 
+ 	/*default black background:*/
+ 	background: #000;
  }
 
 footer{
-	background: -webkit-linear-gradient(left,rgba(63,196,169,1)40%, rgba(132,225,255,1)),
+	background: -webkit-linear-gradient(left,rgba(63,196,169,0.7)30%, rgba(132,225,255,0.7)),
     center center no-repeat;
-	/*background-image:-moz-linear-gradient(left,rgb(63,196,169), rgb(132,255,255));*/
-	/*background-color: rgb(63,196,169);*/
-	padding: 25px;
+	padding: 15px;
+}
+.logo_footer{
+	margin-right: 5px;
+}
+.logo_footer:hover{
+	height: 25px;
+
+}
+
+.copyright{
+	text-align: center;
+	font-family: 'Enriqueta', serif;
+	font-size: 14px;
+	color:white;
 }
 
