--- a/final_project/art_project/app/assets/stylesheets/project.css.scss
+++ b/final_project/art_project/app/assets/stylesheets/project.css.scss
@@ -45,11 +45,16 @@
   
 
 }
-
+/*Nav right menu*/
+.navbar-left,
+.navbar-right.top-menu{
+	margin-top: -8px;
+    position:relative;
+}
 /*Navegation buttoms*/
-.navbar-nav li a {
+.navbar-left li a,
+.navbar-right li a {
     color:white;
-    margin-top: -7px;
 }
 .navbar-nav li a:hover {
    
@@ -62,9 +67,28 @@
 	padding: 0;
 
 }
+/*Section 2 home*/
 .module.content{
 	background-color: white;
+	padding: 100px;
 }
+
+	.navbar-center{
+    float:none;
+    margin: 0 auto;
+    display: table;
+    table-layout: fixed;
+}
+/*Small Home images*/
+
+.image_small_home{
+	height: 120px;
+	width: 150px;
+	vertical-align: center;
+}
+
+
+
 
 /*#slide-2 .hsContent {
     margin-left: -450px;
