Saved before creating a new repo for heroku

--- a/final_project/art_project/app/assets/stylesheets/project.css.scss
+++ b/final_project/art_project/app/assets/stylesheets/project.css.scss
@@ -17,8 +17,9 @@
 }
 .logo_small{
 	margin-top: 2em;
-	margin-left:4em;
-	/*padding-left: 20px;*/
+	/*margin-left:4em;*/
+
+	padding-left: 10px;
 
 }
 
@@ -45,16 +46,18 @@
   
 
 }
-/*Nav right menu*/
+/*Nav right menu and left*/
 .navbar-left,
 .navbar-right.top-menu{
-	margin-top: -8px;
+	margin-top: -0.7%;
+	/*margin-top: -20px;*/
     position:relative;
 }
 /*Navegation buttoms*/
 .navbar-left li a,
 .navbar-right li a {
     color:white;
+   
 }
 .navbar-nav li a:hover {
    
@@ -70,7 +73,7 @@
 /*Section 2 home*/
 .module.content{
 	background-color: white;
-	padding: 100px;
+	padding: 60px;
 }
 
 	.navbar-center{
@@ -78,16 +81,20 @@
     margin: 0 auto;
     display: table;
     table-layout: fixed;
+    /*vertical-align: center;*/
+
 }
 /*Small Home images*/
 
 .image_small_home{
-	height: 120px;
-	width: 150px;
-	vertical-align: center;
+	height: 231px;
+	width: 300px
+
 }
-
-
+.image_small_home{
+	padding-bottom: 15px;
+	border-bottom:1px solid black;
+}
 
 
 /*#slide-2 .hsContent {
