--- a/final_project/art_project/app/views/pages/home.html.erb
+++ b/final_project/art_project/app/views/pages/home.html.erb
@@ -21,15 +21,24 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta cum distinctio eum asperiores rem enim fugit eaque voluptas est laboriosam in repudiandae architecto placeat, illum atque quasi explicabo, culpa, molestias!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit voluptas, aperiam quae provident, recusandae rem quis. Ut quaerat, quasi iste voluptate et dolorem atque sed neque voluptates, molestias dolor enim!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam odit tempore, quibusdam impedit deserunt. Natus quisquam, facilis numquam, molestias nesciunt modi, at debitis maxime sunt et quo quas labore perferendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde delectus laborum doloremque recusandae, debitis maxime a! Nihil distinctio ex, cumque tempore ea voluptas omnis odit, quaerat natus nam excepturi corporis!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque eius harum atque unde nihil aut quam provident sunt, iste error vitae suscipit dolores cupiditate totam, eum quae alias! Dicta, nisi.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate beatae impedit officia quis odit rerum sequi, explicabo commodi illum suscipit, tempore eum doloremque quae obcaecati tempora quidem neque sapiente modi?</p>-->
-	<nav class="nav navbar-nav navbar-center">
+	<!-- <nav class="nav navbar-nav navbar-center"> -->
   	<div class="container-fluid">
-			 <ul class="nav navbar-nav navbar-center">
-				<li><%= image_tag '11.jpg', alt: 'logo',:class => "image_small_home"%></li>
-	    	<li><%= image_tag '9.jpg', alt: 'logo',:class => "image_small_home"%></li>
-	    	<li><%= image_tag '3.jpg', alt: 'logo',:class => "image_small_home"%></li>
-  	 </ul>
+			 <!-- <ul class="nav navbar-nav home-images"> -->
+				<div class="col-sm-4"><a href=""><%= image_tag '11.jpg', alt: 'logo',:class => "image_small_home"%></div>
+	    	<div class="col-sm-4"><a href=""><%= image_tag '9.jpg', alt: 'logo',:class => "image_small_home"%></div>
+	    	<div class="col-sm-4"><a href=""><%= image_tag '3.jpg', alt: 'logo',:class => "image_small_home"%></div>
+  	 <!-- </ul> -->
     </div> 
-  </nav>
+
+    <div class="container-fluid">
+			 <!-- <ul class="nav navbar-nav home-images"> -->
+				<div class="col-sm-4"><a href=""><%= image_tag '11.jpg', alt: 'logo',:class => "text_home"%></div>
+	    	<div class="col-sm-4"><a href=""><%= image_tag '9.jpg', alt: 'logo',:class => "text_home"%></div>
+	    	<div class="col-sm-4"><a href=""><%= image_tag '3.jpg', alt: 'logo',:class => "text
+	    	_home"%></div>
+  	 <!-- </ul> -->
+    </div> 
+  <!-- </nav> -->
   </section>
 </main>
 
